# ScrapImoveis

./: .gitignore  README.md
scrap-imoveis/: README.md  output.xlsx  pyproject.toml
scrap-imoveis/analysis/: analysis-webscraping.ipynb  output-analysis.xlsx
scrap-imoveis/src/scrap_imoveis/: main.py
