[project]
name = "scrap-imoveis"
version = "0.1.0"
description = ""
authors = [
    {name = "leticiacb1",email = "leticiacb1@al.insper.edu.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "scrap_imoveis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
