[project]
name = "scrap-imoveis"
version = "0.1.0"
description = ""
authors = [
    {name = "leticiacb1",email = "leticiacb1@al.insper.edu.br"},
    {name = "LidiaDomingos",email = "lidiaacd@al.insper.edu.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.32.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)"
]

[tool.poetry]
packages = [{include = "scrap_imoveis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "scrap_imoveis.main:main"
